# gr_description_ros2_R-D_kit

./: CMakeLists.txt  README.md  package.xml
launch/: disp_ign.launch.py  ign_gazebo.launch.py  rviz.launch.py
meshes/accessories/: ouster.stl
models/: README.md
models/gr_robot/: model.config  model_bis.sdf  model_urdf.urdf
models/gr_robot/meshes/accessories/: helios_16.stl
params/: ignition_bridge.yaml
rviz/: odom_display.rviz
sdf/: README.md  gr_p247.sdf  gr_p247.sdf.xacro
sdf/accessories/: _d435.gazebo.xacro  _d435.sdf.xacro  _d455.sdf.xacro  gps.sdf.xacro  gr_ros_kit.sdf.xacro  helios_16.sdf.xacro  livox_mid360.xacro  phidget_spatial.sdf.xacro  zed2i_macro.sdf.xacro
sdf/agilex/scout/: scout_mini.gazebo  scout_mini.sdf.xacro  scout_mini_wheel.sdf.xacro  scout_wheel.gazebo
urdf/: README.md  gr_p247.urdf  gr_p247.urdf.xacro  gr_urdf.urdf
urdf/accessories/: OS0-rev7.urdf.xacro  OS1-32.urdf.xacro  _d435.gazebo.xacro  _d435.urdf.xacro  gps.urdf.xacro  gr_ros_kit.urdf.xacro  helios_16.urdf.xacro  phidget_spatial.urdf.xacro
urdf/agilex/: bunker_mini_v2.urdf.xacro
urdf/agilex/ranger_mini_v2/: ranger_mini.xacro
urdf/agilex/scout/: scout_mini.urdf.xacro
urdf_copy/: gr_p247.urdf  gr_p247.urdf.xacro
urdf_copy/accessories/: _d435.urdf.xacro  gps.urdf.xacro  helios_16.urdf.xacro  phidget_spatial.urdf.xacro
urdf_copy/agilex/: hunter_base.urdf.xacro
urdf_copy/agilex/scout/: scout.urdf.xacro  scout_mini.gazebo  scout_mini.urdf.xacro  scout_mini_wheel.xacro  scout_wheel_type2.xacro
worlds/: README.md  my_world2.sdf  test_world.sdf
